Alteração de fotos e Sobre mim

--- a/src/pagina/SobreMim/sobremim.module.css
+++ b/src/pagina/SobreMim/sobremim.module.css
@@ -1,8 +1,9 @@
 .fotoSobreMim {
     margin-bottom: .5rem;
     margin-left: 1.5rem;
-    width: 40vw;
+    width: 30vw;
     float: right;
+    border-radius: 15%;
 }
 
 .subtitulo {
